load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "benchmark-uploads_lib",
    srcs = ["main.go"],
    importpath = "github.com/pachyderm/pachyderm/v2/etc/benchmark-uploads",
    visibility = ["//visibility:private"],
    deps = [
        "//src/client",
        "@com_github_docker_go_units//:go-units",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_minio_minio_go_v7//:minio-go",
        "@com_github_minio_minio_go_v7//pkg/credentials",
        "@com_github_pkg_errors//:errors",
        "@com_github_satori_go_uuid//:go_uuid",
        "@org_golang_x_crypto//blake2b",
        "@org_golang_x_net//http2",
    ],
)

go_binary(
    name = "benchmark-uploads",
    embed = [":benchmark-uploads_lib"],
    visibility = ["//visibility:public"],
)
