load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("//private/rules:rules.bzl", "copy_to_workspace")

files = ["envoy", "envoy-tls"]

[
    genrule(
        name = "gen_" + x,
        srcs = ["envoy.libsonnet", "pachyderm-services.libsonnet", x + ".jsonnet"],
        tools = ["@jsonnet_go//cmd/jsonnet"],
        outs = [x + ".json"],
        cmd = "$(location @jsonnet_go//cmd/jsonnet) $(location :" + x + ".jsonnet) > $@",
        visibility = ["//etc/helm/pachyderm:__pkg__"],
    )
    for x in files
]

tar(
    name = "envoy_config_bundle",
    srcs = [x + ".json" for x in files],
    mtree = [
        "etc/helm/pachyderm/envoy.json uid=0 gid=0 time=0 mode=0644 type=file content=$(location envoy.json)",
        "etc/helm/pachyderm/envoy-tls.json uid=0 gid=0 time=0 mode=0644 type=file content=$(location envoy-tls.json)",
    ],
)

copy_to_workspace(
    name = "update",
    src = ":envoy_config_bundle",
)
