load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "testing_lib",
    srcs = ["cleanup.go"],
    importpath = "github.com/pachyderm/pachyderm/v2/etc/testing",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/s3",
    ],
)

go_binary(
    name = "testing",
    embed = [":testing_lib"],
    visibility = ["//visibility:public"],
)
