load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "worker_lib",
    srcs = ["init.go"],
    importpath = "github.com/pachyderm/pachyderm/v2/etc/worker",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "init",
    embed = [":worker_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
