genrule(
    name = "pg_dump_genrule",
    srcs = select({
        "//:is_x86_64_linux": ["@postgres//postgresql-client-17/amd64:data"],
        "//:is_aarch64_linux": ["@postgres//postgresql-client-17/arm64:data"],
    }),
    outs = ["pg_dump"],
    cmd = "$(BSDTAR_BIN) --extract --strip-components 6 --verbose --file $< usr/lib/postgresql/17/bin/pg_dump; mv pg_dump $@",
    executable = True,
    toolchains = ["@bsd_tar_toolchains//:resolved_toolchain"],
    visibility = ["//tools/postgres/pg_dump:__pkg__"],
)

genrule(
    name = "libpq_genrule",
    srcs = select({
        "//:is_x86_64_linux": ["@postgres//libpq5/amd64:data"],
        "//:is_aarch64_linux": ["@postgres//libpq5/arm64:data"],
    }),
    outs = ["libpq.so.5"],
    cmd = "$(BSDTAR_BIN) --extract --strip-components 4 --verbose --file $< usr/lib/" + select({
        "//:is_x86_64_linux": "x86_64-linux-gnu",
        "//:is_aarch64_linux": "aarch64-linux-gnu",
    }) + "/libpq.so.5.17; mv libpq.so.5.17 $@",
    toolchains = ["@bsd_tar_toolchains//:resolved_toolchain"],
    visibility = ["//:__subpackages__"],
)
