load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = [
        "auth.go",
        "auth.pb.go",
        "auth.pb.gw.go",
        "auth.pb.validate.go",
        "auth.pb.zap.go",
        "auth_grpc.pb.go",
    ],
    importpath = "github.com/pachyderm/pachyderm/v2/src/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//src/constants",
        "//src/internal/errors",
        "//src/protoextensions",
        "@com_github_coreos_go_oidc//:go-oidc",
        "@com_github_envoyproxy_protoc_gen_validate//validate",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//utilities",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "auth_test",
    srcs = ["auth_err_test.go"],
    embed = [":auth"],
    deps = [
        "//src/internal/require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
    visibility = ["//src:__pkg__"],
)
