load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "debug",
    srcs = [
        "debug.pb.go",
        "debug.pb.gw.go",
        "debug.pb.validate.go",
        "debug.pb.zap.go",
        "debug_grpc.pb.go",
    ],
    importpath = "github.com/pachyderm/pachyderm/v2/src/debug",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pfs",
        "//src/pps",
        "//src/protoextensions",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//utilities",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_uber_go_zap//zapcore",
    ],
)

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
    visibility = ["//src:__pkg__"],
)
